Add model Friendship

--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,8 @@
 # Configure Using Gemfile
 # gem 'pg'
 #
-default: &default
+default:
+  username: postgres
   adapter: postgresql
   encoding: unicode
   # For details on connection pooling, see Rails configuration guide
@@ -29,7 +30,7 @@ development:
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: ror_social_scaffold
+  #username:
 
   # The password associated with the postgres role (username).
   #password:
